--- a/styles/jcvanv_styles.css
+++ b/styles/jcvanv_styles.css
@@ -1056,6 +1056,12 @@ img.mfp-img {
   body.email img.email {
     max-width: auto;
     width: 100%; } }
+@media screen and (max-width: 767px) and (max-height: 385px) {
+  .name {
+    font-size: 6.5vw; }
+
+  #gallery .category-titles {
+    flex-wrap: nowrap; } }
 @media screen and (max-width: 320px) {
   #gallery {
     min-height: 60vh; } }
